fix: ajustes em implementacoes de funções do controller após testes